<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#80AB55"
    tools:context=".HEmet_inst_meter" >
    <!-- android:background="#b0b0ff" -->
    
    <TextView
        android:id="@+id/tv_title_head_instm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:background="#233C09"
        android:layout_marginBottom="5dp" 
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/head_inst_met" />

    <LinearLayout
        android:id="@+id/meter_values"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/volt_inst1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_volt1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/title_volt1"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_value_volt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_volt1"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/curr_inst1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_curr1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/title_curr1"
                android:textSize="12sp"
                android:textStyle="bold"  />

            <TextView
                android:id="@+id/tv_value_curr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_curr1"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/freq_inst1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<!-- android:background="#cccccc"  -->
            <TextView
                android:id="@+id/tv_title_freq1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/title_freq1"
                android:textSize="12sp"
                android:textStyle="bold"  />

            <TextView
                android:id="@+id/tv_value_freq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80AB55"
                android:text="@string/value_freq1"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_head_inst_graphs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:background="#233C09"
        android:layout_marginTop="5dp" 
        android:layout_marginBottom="5dp" 
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/head_inst_graphs" />
    
      <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

          <Button
              android:id="@+id/btVolt"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
              android:layout_weight="1"
              android:text="@string/bt_volt" />

          <Button
              android:id="@+id/btCurr"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
              android:layout_weight="1"
              android:text="@string/bt_curr" />

          <Button
              android:id="@+id/btFreq"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
			  android:layout_weight="1"
              android:text="@string/bt_freq" />
        
    </LinearLayout>
        
    <com.androidplot.xy.XYPlot
        android:id="@+id/mySimpleXYPlotVolt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        title="A Simple XYPlot Example" />
	
</LinearLayout>