<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80AB55"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HEmet_hist_voltage" >

    <TextView
        android:id="@+id/tv_title_head_hist_voltage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#233C09"
        android:text="@string/head_hist_voltage"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/histVoltage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btHistVoltDay"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_dayly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistVoltWeek"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_weekly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistVoltMonth"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_monthly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistVoltYear"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_yearly"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_title_head_hist_voltage_graph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginBottom="5dp"
        android:background="#233C09"
        android:text="@string/head_hist_voltage_graphs"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="italic" />

	<com.androidplot.xy.XYPlot
        android:id="@+id/mySimpleXYPlotHistVolt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        title="A Simple XYPlot Example" />
    
</LinearLayout>