<!--
 *  Copyright (C)2013, Jesus Urcera Lopez
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see http://www.gnu.org/licenses/. 
 *
 *  Author : Jesus Urcera Lopez <jurcera at gmail dot com>
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#80AB55"
    tools:context=".HEmet_inst_power" >
    <!-- android:background="#b0b0ff" -->
    
    <TextView
        android:id="@+id/tv_title_head_instp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:background="#233C09"
        android:layout_marginBottom="5dp" 
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/head_inst_power" />

    <LinearLayout
        android:id="@+id/meter_power"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/pact_inst1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_pact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_pact"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_value_pact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_pact"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prea_inst1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_title_prea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_prea"
                android:textSize="12sp"
                android:textStyle="bold"  />

            <TextView
                android:id="@+id/tv_value_prea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_prea"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/papp_inst1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
			<!-- android:background="#cccccc"  -->
            <TextView
                android:id="@+id/tv_title_papp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_papp"
                android:textSize="12sp"
                android:textStyle="bold"  />

            <TextView
                android:id="@+id/tv_value_papp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80AB55"
                android:text="@string/value_papp"
                android:textSize="32sp" 
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_head_inst_power_graphs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:background="#233C09"
        android:layout_marginTop="5dp" 
        android:layout_marginBottom="5dp" 
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:text="@string/head_inst_power_graphs" />
    
      <LinearLayout
        android:id="@+id/buttonsPower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

          <Button
              android:id="@+id/btPact"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
              android:layout_weight="1"
              android:text="@string/bt_pact" />

          <Button
              android:id="@+id/btPrea"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
              android:layout_weight="1"
              android:text="@string/bt_prea" />

          <Button
              android:id="@+id/btPapp"
              android:layout_width="wrap_content"
              android:layout_height="34dp"
              android:textSize="12sp"
              android:textStyle="bold"
			  android:layout_weight="1"
              android:text="@string/bt_papp" />
        
    </LinearLayout>
        
    <com.androidplot.xy.XYPlot
        android:id="@+id/mySimpleXYPlotPower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        title="A Simple XYPlot Example" />
	
</LinearLayout>