<!--
 *  Copyright (C)2013, Jesus Urcera Lopez
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see http://www.gnu.org/licenses/. 
 *
 *  Author : Jesus Urcera Lopez <jurcera at gmail dot com>
 *
--> 
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80AB55"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HEmet_hist_pact" >

    <TextView
        android:id="@+id/tv_title_head_hist_pact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#233C09"
        android:text="@string/head_hist_pact"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/histPact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btHistPactDay"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_dayly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistPactWeek"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_weekly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistPactMonth"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_monthly"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btHistPactYear"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/label_yearly"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_title_head_hist_pact_graph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginBottom="5dp"
        android:background="#233C09"
        android:text="@string/head_hist_pact_graphs"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="italic" />

	<com.androidplot.xy.XYPlot
        android:id="@+id/mySimpleXYPlotHistPact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        title="A Simple XYPlot Example" />
    
</LinearLayout>